--- a/v-4/bookmarks.html
+++ b/v-4/bookmarks.html
@@ -4,6 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Bookmark Manager - by nitin</title>
+      <link rel="stylesheet" href="style.css">
 </head>
 <body>
       <h1>My Bookmarks - by nitin</h1>
